docs-website/versioned_docs/version-2.19/pipeline-components/converters/external-integrations-converters.mdx
---
title: "External Integrations"
id: external-integrations-converters
slug: "/external-integrations-converters"
description: "External integrations that enable extracting data from files in different formats and cast it into the unified document format."
---

# External Integrations

External integrations that enable extracting data from files in different formats and cast it into the unified document format.

| Name                                                         | Description                                                                                                                                                                          |
| :----------------------------------------------------------- | :----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [Docling](https://haystack.deepset.ai/integrations/docling/) | Parse PDF, DOCX, HTML, and other document formats into a rich standardized representation (such as layout, tables..), which it can then export to Markdown, JSON, and other formats. |
